--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,33 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-color: #0370fc;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2em;
+  justify-content: center;
+  padding: 2em;
 }
 
 .card {
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
   padding: 2em;
+  width: 500px;
+  box-sizing: border-box;
+}
+
+.header {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  max-width: 1030px;
+  justify-content: center;
+  margin: auto;
 }
